clusters/core/env/production/longhorn/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`longhorn.${SECRET_DOMAIN}`)"
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: crj-wildcard-certificate
    domains:
      - main: longhorn.${SECRET_DOMAIN}
# ---
# apiVersion: externaldns.k8s.io/v1alpha1
# kind: DNSEndpoint
# metadata:
#   name: navidrome
#   annotations:
#     external-dns/public: "true"
# spec:
#   endpoints:
#     - dnsName: music.${SECRET_DOMAIN}
#       recordTTL: 300
#       recordType: CNAME
#       targets:
#         - ${DYNAMIC_DOMAIN}
